[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mem-void"
version = "0.1.0"
description = "Temporal Knowledge Graph Memory System"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "MemVoid Contributors"}]
dependencies = [
    "neo4j>=5.14,<6.0",
    "openai>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "testcontainers>=4.0,<5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
